# newspyper

./: .gitignore  Makefile  README.md  config_template.yaml  pyproject.toml  requirements.txt  summary_2026-05-01.md
src/: __main__.py
