[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newspyper"
version = "0.0.1"
authors = [
  { name="Jordi Carrera Ventura", email="jordi.carrera.ventura@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.14.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "pyyaml",
    "build",
    "gitpython",
    "openai",
    "python-dotenv",
    "twine"
]

[project.urls]
"GitHub repository page" = ""
"Pypi package page" = ""
